# freetype-test

./: .gitignore  CMakeLists.txt  build.bat  readme.md
src/: main.c  main.h  utils.c  utils.h
